descrição da alteração feita

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
             </div>
             <div>
                 <h3 class="text-white text-xl font-bold mb-6">Localização</h3>
-                <p>Rua Exemplo de Beleza, 123</p>
-                <p>Bairro Charmoso - Sua Cidade, UF</p>
+                <p>Rua Camboatá, 30</p>
+                <p>Bairro Amazônia - Juiz de Fora, MG</p>
             </div>
             <div>
                 <h3 class="text-white text-xl font-bold mb-6">Agendamentos</h3>
@@ -170,7 +170,7 @@
             </div>
         </div>
         <div class="max-w-6xl mx-auto border-t border-stone-800 mt-12 pt-8 text-sm text-center">
-            <p>&copy; 2024 Studio Hair. Todos os direitos reservados.</p>
+            <p>&copy; 2026 Studio Hair. Todos os direitos reservados.</p>
         </div>
     </footer>
 
