area de resultados

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 <span class="text-amber-600 font-semibold tracking-widest uppercase text-sm italic">Especialista em Beleza</span>
                 <h1 class="text-5xl md:text-6xl font-bold leading-tight">Olá, eu sou Amanda Kelmer</h1>
                 <p class="text-lg text-stone-600 leading-relaxed">
-                    Com mais de 10 anos de experiência no mercado de beleza, transformo autoestima através do cuidado capilar. Especialista em colorimetria e cortes modernos, meu objetivo é realçar a sua identidade única em cada atendimento.
-                </p>
+                    Especialista em colorimetria e tricologia, trago comigo uma bagagem sólida no universo da beleza. Meu trabalho é focado em unir técnica e sensibilidade para transformar a saúde e a estética capilar, sempre com o objetivo de elevar a autoestima e destacar a beleza individual de cada cliente
                 <div class="pt-4 flex flex-col gap-4">
                     <a href="#contato" class="inline-block bg-stone-900 text-white px-8 py-4 rounded-lg font-semibold hover:bg-stone-800 transition shadow-lg text-center">
                         Conhecer meu Trabalho
@@ -230,115 +229,6 @@
                                     </div>
                                 </div>
 
-                            </div>
-                            <p class="text-xs text-stone-500 mt-4 italic">* Modelada com grampos: acréscimo de R$ 10,00</p>
-                        </div>
-
-                        <!-- Categoria: Estética -->
-                        <div>
-                            <h4 class="text-2xl font-bold mb-6 text-stone-800">Estética</h4>
-                            <div class="grid md:grid-cols-2 gap-6">
-
-                                <!-- Card: Sobrancelha -->
-                                <div class="bg-stone-50 rounded-xl border border-stone-200 p-5 hover:shadow-md transition">
-                                    <h5 class="font-bold text-lg mb-3 text-stone-900">Sobrancelha</h5>
-                                    <div class="space-y-2 text-sm">
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">Designer</span>
-                                            <span class="font-bold text-amber-700">R$ 25,00</span>
-                                        </div>
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">Designer + Henna</span>
-                                            <span class="font-bold text-amber-700">R$ 35,00</span>
-                                        </div>
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">Somente Henna</span>
-                                            <span class="font-bold text-amber-700">R$ 20,00</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Card: Alongamento de Cílios -->
-                                <div class="bg-stone-50 rounded-xl border border-stone-200 p-5 hover:shadow-md transition">
-                                    <h5 class="font-bold text-lg mb-3 text-stone-900">Alongamento de Cílios</h5>
-                                    <div class="space-y-2 text-sm">
-                                        <div class="text-stone-800 font-semibold mb-1 text-xs">Volume Brasileiro / Efeito Fox</div>
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700 pl-2">Colocação</span>
-                                            <span class="font-bold text-amber-700">R$ 70,00</span>
-                                        </div>
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700 pl-2">Manutenção (20 a 30 dias)</span>
-                                            <span class="font-bold text-amber-700">R$ 50,00</span>
-                                        </div>
-                                        <div class="text-stone-800 font-semibold mt-3 mb-1 text-xs">Volume Egípcio / Efeito Anime</div>
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700 pl-2">Colocação</span>
-                                            <span class="font-bold text-amber-700">R$ 80,00</span>
-                                        </div>
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700 pl-2">Manutenção (20 a 30 dias)</span>
-                                            <span class="font-bold text-amber-700">R$ 60,00</span>
-                                        </div>
-                                        <div class="flex justify-between items-center border-t border-stone-300 pt-2 mt-2">
-                                            <span class="text-stone-700">Remoção</span>
-                                            <span class="font-bold text-amber-700">R$ 25,00</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Card: Maquiagem -->
-                                <div class="bg-stone-50 rounded-xl border border-stone-200 p-5 hover:shadow-md transition">
-                                    <h5 class="font-bold text-lg mb-3 text-stone-900">Maquiagem</h5>
-                                    <div class="space-y-2 text-sm">
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">Simples</span>
-                                            <span class="font-bold text-amber-700">R$ 80,00</span>
-                                        </div>
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">Premium</span>
-                                            <span class="font-bold text-amber-700">R$ 100,00</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Card: Limpeza de Pele -->
-                                <div class="bg-stone-50 rounded-xl border border-stone-200 p-5 hover:shadow-md transition">
-                                    <h5 class="font-bold text-lg mb-3 text-stone-900">Limpeza de Pele</h5>
-                                    <div class="space-y-2 text-sm">
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">Procedimento</span>
-                                            <span class="font-bold text-amber-700">R$ 60,00+</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Card: Massagem Relaxante -->
-                                <div class="bg-stone-50 rounded-xl border border-stone-200 p-5 hover:shadow-md transition">
-                                    <h5 class="font-bold text-lg mb-3 text-stone-900">Massagem Relaxante</h5>
-                                    <div class="space-y-2 text-sm">
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">50 minutos</span>
-                                            <span class="font-bold text-amber-700">R$ 60,00</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Card: Depilação -->
-                                <div class="bg-stone-50 rounded-xl border border-stone-200 p-5 hover:shadow-md transition">
-                                    <h5 class="font-bold text-lg mb-3 text-stone-900">Depilação</h5>
-                                    <div class="space-y-2 text-sm">
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">Buço</span>
-                                            <span class="font-bold text-amber-700">R$ 10,00</span>
-                                        </div>
-                                        <div class="flex justify-between items-center">
-                                            <span class="text-stone-700">Axila</span>
-                                            <span class="font-bold text-amber-700">R$ 20,00</span>
-                                        </div>
-                                    </div>
-                                </div>
-
                                 <!-- Card: Penteado -->
                                 <div class="bg-stone-50 rounded-xl border border-stone-200 p-5 hover:shadow-md transition">
                                     <h5 class="font-bold text-lg mb-3 text-stone-900">Penteado</h5>
@@ -351,6 +241,7 @@
                                 </div>
 
                             </div>
+                            <p class="text-xs text-stone-500 mt-4 italic">* Modelada com grampos: acréscimo de R$ 10,00</p>
                         </div>
 
                         <div class="text-xs text-stone-500 text-center border-t border-stone-200 pt-6">* Valores podem variar conforme avaliação, comprimento e tempo de manutenção.</div>
@@ -368,28 +259,28 @@
         </div>
 
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-            <!-- Galeria Item 1 -->
+            <!-- Cliente 1 -->
             <div class="group relative overflow-hidden rounded-xl h-80 shadow-md">
-                <img src="https://images.unsplash.com/photo-1560869713-7d0a29430803?auto=format&fit=crop&q=80&w=600" 
-                     class="w-full h-full object-cover transform group-hover:scale-110 transition duration-500" alt="Resultado Cabelo">
+                <img src="imgs/Cliente1.png" 
+                     class="w-full h-full object-cover transform group-hover:scale-110 transition duration-500" alt="Transformação da cliente 1" loading="lazy">
                 <div class="absolute inset-0 bg-black/40 flex items-end p-6 opacity-0 group-hover:opacity-100 transition">
-                    <span class="text-white font-medium">Loiro Perolado</span>
+                    <span class="text-white font-medium">Cliente 1</span>
                 </div>
             </div>
-            <!-- Galeria Item 2 -->
+            <!-- Cliente 2 -->
             <div class="group relative overflow-hidden rounded-xl h-80 shadow-md">
-                <img src="https://images.unsplash.com/photo-1492106087820-71f1a00d2b11?auto=format&fit=crop&q=80&w=600" 
-                     class="w-full h-full object-cover transform group-hover:scale-110 transition duration-500" alt="Resultado Cabelo">
+                <img src="imgs/Cliente2.png" 
+                     class="w-full h-full object-cover transform group-hover:scale-110 transition duration-500" alt="Transformação da cliente 2" loading="lazy">
                 <div class="absolute inset-0 bg-black/40 flex items-end p-6 opacity-0 group-hover:opacity-100 transition">
-                    <span class="text-white font-medium">Corte Bob Moderno</span>
+                    <span class="text-white font-medium">Cliente 2</span>
                 </div>
             </div>
-            <!-- Galeria Item 3 -->
+            <!-- Cliente 3 -->
             <div class="group relative overflow-hidden rounded-xl h-80 shadow-md">
-                <img src="https://images.unsplash.com/photo-1605497788044-5a32c7078486?auto=format&fit=crop&q=80&w=600" 
-                     class="w-full h-full object-cover transform group-hover:scale-110 transition duration-500" alt="Resultado Cabelo">
+                <img src="imgs/Cliente3.png" 
+                     class="w-full h-full object-cover transform group-hover:scale-110 transition duration-500" alt="Transformação da cliente 3" loading="lazy">
                 <div class="absolute inset-0 bg-black/40 flex items-end p-6 opacity-0 group-hover:opacity-100 transition">
-                    <span class="text-white font-medium">Morena Iluminada</span>
+                    <span class="text-white font-medium">Cliente 3</span>
                 </div>
             </div>
         </div>
