fixed instagram link

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                 <p class="text-lg text-stone-600 leading-relaxed">
                     Especialista em colorimetria e tricologia, trago comigo uma bagagem sólida no universo da beleza. Meu trabalho é focado em unir técnica e sensibilidade para transformar a saúde e a estética capilar, sempre com o objetivo de elevar a autoestima e destacar a beleza individual de cada cliente
                 <div class="pt-4 flex flex-col gap-4">
-                    <a href="#contato" class="inline-block bg-stone-900 text-white px-8 py-4 rounded-lg font-semibold hover:bg-stone-800 transition shadow-lg text-center">
+                    <a href="#portfolio" class="inline-block bg-stone-900 text-white px-8 py-4 rounded-lg font-semibold hover:bg-stone-800 transition shadow-lg text-center">
                         Conhecer meu Trabalho
                     </a>
                     <div class="flex gap-4">
-                        <a href="https://www.instagram.com/amandakelmer?igsh=MWUwYmtrM3hveXQ4NA==" target="_blank" class="inline-block bg-gradient-to-r from-pink-500 to-purple-600 text-white px-8 py-3 rounded-full hover:from-pink-600 hover:to-purple-700 transition shadow-lg font-semibold">
-                            Seguir no Instagram
+                        <a href="https://www.instagram.com/amandakelmer/" target="_blank" class="inline-block bg-gradient-to-r from-pink-500 to-purple-600 text-white px-8 py-3 rounded-full hover:from-pink-600 hover:to-purple-700 transition shadow-lg font-semibold">
+                            Seguir
                         </a>
                         <a href="https://wa.me/553291851565" target="_blank" class="inline-block bg-green-600 text-white px-8 py-3 rounded-full hover:bg-green-500 transition shadow-lg font-semibold">
                             Chamar no WhatsApp
@@ -112,23 +112,23 @@
 
                                 <!-- Card: Escova (avulsa) -->
                                 <div class="bg-stone-50 rounded-xl border border-stone-200 p-5 hover:shadow-md transition">
-                                    <h5 class="font-bold text-lg mb-3 text-stone-900">Escova (avulsa)</h5>
+                                    <h5 class="font-bold text-lg mb-3 text-stone-900">Escova</h5>
                                     <div class="space-y-2 text-sm">
                                         <div class="flex justify-between items-center">
                                             <span class="text-stone-700">Pequeno</span>
-                                            <span class="font-bold text-amber-700">R$ 110,00</span>
+                                            <span class="font-bold text-amber-700">R$ 30,00</span>
                                         </div>
                                         <div class="flex justify-between items-center">
                                             <span class="text-stone-700">Médio</span>
-                                            <span class="font-bold text-amber-700">R$ 150,00</span>
+                                            <span class="font-bold text-amber-700">R$ 40,00</span>
                                         </div>
                                         <div class="flex justify-between items-center">
                                             <span class="text-stone-700">Grande</span>
-                                            <span class="font-bold text-amber-700">R$ 190,00</span>
+                                            <span class="font-bold text-amber-700">R$ 50,00</span>
                                         </div>
                                         <div class="flex justify-between items-center">
                                             <span class="text-stone-700">Extra grande</span>
-                                            <span class="font-bold text-amber-700">R$ 230,00+</span>
+                                            <span class="font-bold text-amber-700">R$ 60,00</span>
                                         </div>
                                     </div>
                                 </div>
@@ -368,9 +368,6 @@
             <div> 
                 <h3 class="text-white text-2xl font-bold mb-6">Kelmer Beauty </h3>
                 <p class="mb-4">Especialista em realçar a sua beleza natural.</p>
-                <div class="flex space-x-4">
-                    <a href="#" class="hover:text-white transition">Instagram</a>
-                </div>
             </div>
             <div>
                 <h3 class="text-white text-xl font-bold mb-6">Localização</h3>
